--- a/dark.css
+++ b/dark.css
@@ -6,7 +6,7 @@
  * @source https://github.com/DiscordStyles/DarkMatter/
 */
 
-@import url('https://DiscordStyles.github.io/DarkMatter/src/base.css');
+@import url('https://raw.githubusercontent.com/Luca7iel/Dot-Files/master/main.css');
 
 /* Variables */
 :root {
